--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "goyaka",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://abhinm2india.github.io/goyaka",
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
