--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
   "@mui/material": "^5.4.3",
   
     
+  "@react-google-maps/api": "^2.8.1",
+  
+    
   "@testing-library/jest-dom": "^5.16.2",
   
     
@@ -48,6 +51,9 @@
   
     
   "react-dom": "^17.0.2",
+  
+    
+  "react-google-autocomplete": "^2.6.1",
   
     
   "react-material-ui-carousel": "^3.2.0",
