--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "axios": "^0.26.1",
     "date-fns": "^2.28.0",
     "emailjs-com": "^3.2.0",
+    "material-ui-phone-number": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-autocomplete": "^2.6.1",
     "react-material-ui-carousel": "^3.2.0",
+    "react-phone-input-2": "^2.15.0",
     "react-phone-input-material-ui": "^2.17.4",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
